# project-crosshair

./: .gitignore  README.md
.agents/crosshair/: SKILL.md
.agents/crosshair-comments/: SKILL.md
examples/: demo.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  HistoryDrawer.tsx  hydrate.ts  plotly.d.ts  styles.css  theme.ts  types.ts  ws.ts
frontend/src/panels/: CommentLayer.tsx  PanelFrame.tsx  PlotlyPanel.tsx
server/: pyproject.toml
server/crosshair/: __main__.py  client.py  daemon.py  data.py  ops.py  persist.py  state.py  tools.py  web.py
