[project]
name = "crosshair"
version = "0.1.0"
description = "Agent-driven scientific visualization workbench (MCP server + browser app)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pandas>=2.0",
    "pyarrow>=15",
]

[project.scripts]
crosshair = "crosshair.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crosshair"]
